<resources>
    <string name="app_name">BookStory</string>
    <string name="welcome_message">Start your reading journey</string>
    <string name="login">Login</string>
    <string name="adauga_un_autor_nou">Adauga un autor nou</string>
    <string name="nume_autor">Nume autor</string>
    <string name="adauga_autorul">Adauga autorul</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="titlu">Titlu</string>
    <string name="introdu_titlul">Introdu titlul</string>
    <string name="isbn">ISBN</string>
    <string name="introdu_isbn">Introdu ISBN</string>
    <string name="numar_copii_disponibile">Numar copii disponibile</string>
    <string name="introdu_nr_de_copii_disponibile">Introdu nr de copii</string>
    <string name="gen_carte">Gen carte</string>
    <string name="add_image">Add Image</string>
    <string name="salvare">Salveaza cartea</string>
    <string name="remember_me">Remember me</string>
    <string name="login_as_admin">Login as admin</string>
    <string name="register">Register</string>
    <string name="adauga_o_carte">Adauga o carte</string>
    <string name="adauga_autor">Adauga autor</string>
    <string name="adauga_carte">Adauga Carte</string>
    <string name="sterge_autori">Sterge autori</string>
    <string name="sterge_carti">Sterge carti</string>
    <string name="nume_complet">Nume complet</string>
    <string name="adresa">Adresa</string>
    <string name="nr_telefon">Nr telefon</string>
    <string name="register_to_bookstory">Register to BookStory</string>
    <string name="enter_email">Please enter your email!</string>
    <string name="enter_password">ENTER PASSWORD!</string>
    <string name="invalid_password">Password should be at least 6 characters long!</string>
    <string name="reg_failed">Registration failed! Please try again later</string>
    <string name="reg_successfull">Registration successful!</string>
    <string name="login_successfull">Login successful!</string>
    <string name="login_failed">Login failed!</string>
    <string name="schimba_poza_de_profil">Schimba poza de profil</string>
    <string name="salveaza_schimbari">Salveaza schimbari</string>
    <string name="delete_the_account">Delete the account</string>
    <string name="bookstory">BookStory</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="autori">Autori</string>
    <string name="admin_mail">admin@test.com</string>
    <string name="admin_pass">ComplicatedAdminPass1234</string>
    <string name="confirmare_stergere">Confirmare stergere</string>
    <string name="mesaj_stergere">Doriti sa stergeti cartea?</string>
    <string name="carte_stearsa">Cartea a fost stearsa!</string>
    <string name="finalizeaza_imprumut">Finalizeaza imprumut</string>
    <string name="imprumuta_cartea">Imprumuta cartea</string>
    <string name="confirmare_finalizare">Confirmare finalizare</string>
    <string name="mesaj_confirm_finalizare">Doriti sa finalizati imprumutul?</string>
    <string name="imprumut_finalizat_toast">Imprumut finalizat!</string>
    <string name="renunta_la_carte">Renunta la carte</string>
    <string name="profile">Profil</string>
    <string name="imprumuta_carti">Lista Carti</string>
    <string name="my_dashboard">Dashboard</string>
    <string name="logout">Sign Out</string>
    <string name="recommended">Recomandari</string>
    <string name="editeaza_profil">Editeaza Profil</string>
    <string name="search">Search</string>
    <string name="book">Book</string>
    <string name="lista_carti">Lista carti</string>
    <string name="sterge_autorii">Sterge autorii</string>
    <string name="sterge_cartile">Sterge cartile</string>
    <string name="mesaj_sterge_autori">Doriti sa stergeti toti autorii?</string>
    <string name="autori_stersi">Toti autorii au fost stersi!</string>
    <string name="mesaj_stergere_carti">Doriti sa stergeti toate cartile?</string>
    <string name="carti_sterse">Toate cartile au fost sterse!</string>
    <string name="calendar">Calendar</string>
    <string name="start">Start</string>
    <string name="imprumuturi">Imprumuturi</string>
    <string name="cover">cover</string>
    <string name="recomandarile_noastre">Recomandarile noastre</string>
    <string name="subiect">Subiect</string>
    <string name="introdu_mesajul">Introdu mesajul</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="send">Send</string>
    <string name="email_msg_type">message/rfc822</string>
    <string name="choose_app">Choose Mail App</string>
    <string name="my_email">mireagmadalina@yahoo.com</string>
    <string name="contact">Contact</string>
    <string name="mesaj_err_parola_empty">Trebuie introdusa parola!</string>
    <string name="format_invalid_email">Format email invalid!</string>
    <string name="mesaj_err_email_empty">Trebuie sa introduceti adresa de email!</string>
    <string name="mesaj_date_conectare_invalide">Date de conectare invalide! Introduceti datele corecte</string>
    <string name="istoric_imprumuturi">Istoric imprumuturi</string>
    <string name="autori_preferati">Autori preferati</string>
    <string name="marcheaza_ca_returnata">Marcheaza ca returnata</string>
    <string name="mesaj_dialog_autori_ok">Autorii au fost adaugati cartii</string>
    <string name="mesaj_dialog_cancel">Actiune anulata</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="autori_disponibili">Autori disponibili</string>
    <string name="mesaj_parola_invalida">Parola trebuie sa contina cel putin 6 caractere si un numar!</string>
    <string name="permission_granted">Permission Granted..</string>
    <string name="permission_denied">Permission Denined.</string>
    <string name="err_nume_empty">Numele trebuie completat!</string>
    <string name="err_adresa_empty">Adresa trebuie completata!</string>
    <string name="err_nr_telefon_invalid">Numarul de telefon introdus trebuie sa fie valid!</string>
    <string name="err_telefon_empty">Trebuie intodus numarul de telefon!</string>
    <string name="err_autor_empty">Trebuie introdus un nume de autor!</string>
    <string name="vizualizeaza_comentarii">Vizualizeaza comentarii</string>
    <string name="introdu_un_comentariu">Introdu un comentariu</string>
    <string name="afiseaza_ascendent_dupa_titlu">Afiseaza ascendent dupa titlu</string>
    <string name="a_z_dupa_titlu">A-Z dupa titlu</string>
    <string name="imprumut_scadent_notification">Aveti un imprumut scadent maine</string>
    <string name="adauga_taxa">Adauga taxa</string>
    <string name="taxa">Introduceti taxa</string>
    <string-array name="add_book_genre">
        <item>FICTION</item>
        <item>ROMANCE</item>
        <item>CLASSIC</item>
        <item>FANTASY</item>
        <item>BIOGRAPHY</item>
        <item>SCIENCE</item>
        <item>PSYCHOLOGY</item>
    </string-array>
</resources>