<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".activities.AdminViewActivity">

    <Button
        android:id="@+id/btnAdaugaAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adauga_autor" />

    <Button
        android:id="@+id/btnAdaugaCarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdaugaAutor"
        android:text="@string/adauga_carte" />
    <Button
        android:id="@+id/btnStergeAutori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdaugaCarte"
        android:text="@string/sterge_autori" />
    <Button
        android:id="@+id/btnStergeCarti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStergeAutori"
        android:text="@string/sterge_carti" />
</RelativeLayout>