<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".activities.AddAuthorActivity">

    <TextView
        android:id="@+id/tvAddAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/adauga_un_autor_nou" />

    <EditText
        android:id="@+id/etNumeAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/nume_autor"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAddAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/adauga_autorul" />
</LinearLayout>