<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".activities.UserProfileActivity">
    <TextView
        android:id="@+id/tvEditProfile"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:text="@string/editeaza_profil"
        android:textSize="30sp"
        android:layout_margin="12dp"
        android:textStyle="bold"/>

    <de.hdodenhof.circleimageview.CircleImageView
           android:layout_width="160dp"
           android:layout_height="160dp"
           android:layout_margin="10dp"
           android:layout_centerInParent="true"
           android:id="@+id/imageView2"
           android:src="@drawable/user"
           android:layout_below="@+id/tvEditProfile"
           android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etDisplayName"
        android:layout_below="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:background="@android:color/transparent"
        />

    <EditText
        android:id="@+id/etChangeEmail"
        android:layout_below="@+id/etDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etChangePassword"
        android:layout_width="wrap_content"
        android:layout_below="@+id/etChangeEmail"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="wrap_content"
        android:layout_below="@+id/etChangePassword"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/salveaza_schimbari" />
    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_below="@+id/etChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/delete_the_account" />
</RelativeLayout>
